--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@ li a {
     margin: auto;
   }
   .footer-width {
+    width: 65% !important;
     position: relative;
     top: 20%;
   }
@@ -262,6 +263,11 @@ li a {
   }
   .banner-text {
     bottom: -60% !important;
+  }
+  .footer-width {
+    width: 73% !important;
+    position: relative;
+    top: 20%;
   }
   /* .main-home-page {
     height: 160vh;
@@ -404,6 +410,11 @@ li a {
   }
   .container {
     padding-left: 10px !important;
+  }
+  .footer-width {
+    width: 98% !important;
+    position: relative;
+    top: 20%;
   }
 
   .google-btnn {
@@ -1522,6 +1533,9 @@ li a {
   .banner-slide-card {
     width: 65rem;
   }
+  .boox {
+    width: 90% !important;
+  }
 }
 @media screen and (max-width: 760px) {
   .banner-slide-card {
@@ -1647,7 +1661,7 @@ li a {
     top: 0;
   }
   .boox {
-    width: 100%;
+    width: 100% !important;
   }
   .mbl-bg-img {
     height: 28vh;
