--- a/src/App.css
+++ b/src/App.css
@@ -356,42 +356,42 @@ li a {
 
 @media screen and (max-width: 1360px) {
   .mainSlider {
-    height: 55vh !important;
+    height: 30rem !important;
   }
 }
 @media screen and (max-width: 1305px) {
   .mainSlider {
-    height: 53vh !important;
+    height: 28rem !important;
   }
 }
 @media screen and (max-width: 1295px) {
   .mainSlider {
-    height: 52vh !important;
+    height: 27.5rem !important;
   }
 }
 @media screen and (max-width: 1265px) {
   .mainSlider {
-    height: 50vh !important;
+    height: 26.5rem !important;
   }
 }
 @media screen and (max-width: 1210px) {
   .mainSlider {
-    height: 49vh !important;
+    height: 25.5rem !important;
   }
 }
 @media screen and (max-width: 1155px) {
   .mainSlider {
-    height: 47vh !important;
+    height: 24rem !important;
   }
 }
 @media screen and (max-width: 1100px) {
   .mainSlider {
-    height: 43vh !important;
+    height: 22.5rem !important;
   }
 }
 @media screen and (max-width: 1050px) {
   .mainSlider {
-    height: 43vh !important;
+    height: 21.5rem !important;
   }
 }
 
