--- a/src/Assets/styles/MainSlider.scss
+++ b/src/Assets/styles/MainSlider.scss
@@ -55,6 +55,20 @@
     width: 20px !important;
   }
 }
+@media screen and (max-width: 2048px) {
+  .mainSlider {
+    .splide__arrow {
+      margin-top: -130px !important;
+    }
+  }
+}
+@media screen and (max-width: 1920px) {
+  .mainSlider {
+    .splide__arrow {
+      margin-top: 0px !important;
+    }
+  }
+}
 @media screen and (max-width: 1310px) {
   .mainSlider {
     .splide__arrow {
