--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ li a {
 .logooo {
   display: none;
 }
+
 @media screen and (max-width: 900px) {
   .logooo {
     display: block;
@@ -1865,5 +1866,257 @@ li a {
 @media screen and (max-width: 675px) {
   .deatils-carddd {
     width: 75%;
+  }
+}
+/* Live Chat Responsiveness */
+/* small tabs + mobile view */
+
+@media screen and (max-width: 850px) {
+  .chat-responsive {
+    display: flex;
+    flex-direction: column;
+  }
+  .liveChat-box {
+    width: 100% !important;
+    /* background-color: red; */
+  }
+  .chat-box-height {
+    min-height: 29rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 26rem !important;
+  }
+  .chat-scroll {
+    max-height: 24rem !important;
+  }
+}
+@media screen and (max-width: 2500px) {
+  .chat-responsive {
+    display: flex;
+  }
+  .chat-box-height {
+    min-height: 61rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 58rem !important;
+  }
+  .chat-scroll {
+    max-height: 56rem !important;
+  }
+  /* .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 26% !important;
+  } */
+}
+@media screen and (max-width: 2400px) {
+  .input-1 {
+    width: 76% !important;
+  }
+  .input-2 {
+    width: 20% !important;
+  }
+}
+@media screen and (max-width: 2400px) {
+  .chat-box-height {
+    min-height: 59rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 56rem !important;
+  }
+  .chat-scroll {
+    max-height: 54rem !important;
+  }
+}
+@media screen and (max-width: 2300px) {
+  .chat-box-height {
+    min-height: 56.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 53rem !important;
+  }
+  .chat-scroll {
+    max-height: 51rem !important;
+  }
+}
+@media screen and (max-width: 2200px) {
+  .chat-box-height {
+    min-height: 54.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 51rem !important;
+  }
+  .chat-scroll {
+    max-height: 50rem !important;
+  }
+}
+@media screen and (max-width: 2100px) {
+  .chat-box-height {
+    min-height: 52rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 49rem !important;
+  }
+  .chat-scroll {
+    max-height: 47.5rem !important;
+  }
+}
+@media screen and (max-width: 2000px) {
+  .chat-box-height {
+    min-height: 49.6rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 45rem !important;
+  }
+}
+@media screen and (max-width: 1980px) {
+  .chat-box-height {
+    min-height: 47.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 42rem !important;
+  }
+}
+@media screen and (max-width: 1900px) {
+  .chat-box-height {
+    min-height: 47.6rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 42rem !important;
+  }
+}
+@media screen and (max-width: 1800px) {
+  .chat-box-height {
+    min-height: 44.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 40rem !important;
+  }
+  .msg-text {
+    width: 300px !important;
+  }
+}
+@media screen and (max-width: 1700px) {
+  .chat-box-height {
+    min-height: 42.3rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 37.7rem !important;
+  }
+  .msg-text {
+    width: 280px !important;
+  }
+}
+@media screen and (max-width: 1600px) {
+  .chat-box-height {
+    min-height: 39.7rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 34.7rem !important;
+  }
+  .msg-text {
+    width: 260px !important;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .chat-box-height {
+    min-height: 37rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 32.3rem !important;
+  }
+  .input-1 {
+    width: 73% !important;
+  }
+  .input-2 {
+    width: 22% !important;
+  }
+  .msg-text {
+    width: 240px !important;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .chat-box-height {
+    min-height: 34.6rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 30rem !important;
+  }
+  .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 24% !important;
+  }
+  .msg-text {
+    width: 220px !important;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .chat-box-height {
+    min-height: 32.3rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 28rem !important;
+  }
+  .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 26% !important;
+  }
+  .msg-text {
+    width: 190px !important;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .chat-box-height {
+    min-height: 30rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 25rem !important;
+  }
+  .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 28% !important;
+  }
+  .msg-text {
+    width: 170px !important;
+    font-size: 12px;
   }
 }
