--- a/src/Assets/styles/LiveChat.scss
+++ b/src/Assets/styles/LiveChat.scss
@@ -34,19 +34,19 @@
 .input-1 {
   .chat-text-area {
     background-color: transparent !important;
-    outline: 0px !important;
+    // outline: 0px !important;
     resize: none !important;
     line-height: 15px !important;
-    border-style: none !important;
+    // border-style: none !important;
     // border-color: Transparent !important;
     // overflow: auto !important;
-    outline: none !important;
+    // outline: none !important;
     border-radius: 20px !important;
   }
   .chat-text-area:focus,
   select:focus {
     background-color: transparent !important;
-    outline: 0px !important;
+    // outline: 0px !important;
     // color: #1a1a1a;
   }
 }
