Live Chat component

--- a/src/Assets/styles/LiveChat.scss
+++ b/src/Assets/styles/LiveChat.scss
@@ -28,7 +28,7 @@
 }
 .chat-bar::-webkit-scrollbar {
   display: none;
-  // background-color: #00c22a;
+  // background-color: #313131;
 }
 .chat-bar {
   -ms-overflow-style: none; /* IE and Edge */
