--- a/src/Assets/styles/LiveChat.scss
+++ b/src/Assets/styles/LiveChat.scss
@@ -31,11 +31,37 @@
   // background-color: #313131;
 }
 .chat-bar {
-  -ms-overflow-style: none none !important; 
-  scrollbar-width: none none !important; }
+  -ms-overflow-style: none none !important;
+  scrollbar-width: none none !important;
+}
 .chat-scroll {
-  -ms-overflow-style: none none !important; 
-  scrollbar-width: none none !important; 
+  -ms-overflow-style: none none !important;
+  scrollbar-width: none none !important;
+}
+.input-1 {
+  textarea {
+    /* border-radius: 20px !important; */
+    background-color: transparent !important;
+    /* outline: 0px !important; */
+    resize: none !important;
+    line-height: 15px !important;
+    border: 1px solid white !important;
+    /* border-color: Transparent !important; */
+    /* overflow: auto !important; */
+    outline: none !important;
+    border-radius: 20px !important;
+    color: white !important;
+    padding-left: 10px;
+    padding-top: 5px;
+    font-size: 10px !important;
+    height: 45px;
+    max-height: 40px !important;
+  }
+  textarea:focus {
+    background-color: transparent !important;
+    /* outline: 0px !important; */
+    color: #1a1a1a;
+  }
 }
 
 .input-1 {
