--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,50 @@ li a {
 .logooo {
   display: none;
 }
+aside {
+  width: 100% !important;
+  height: 100% !important;
+}
+.epr-main
+  .EmojiPickerReact
+  .epr_mw4zr1
+  .epr_q53mwh
+  .epr_7hyle2
+  .epr_-x928hz
+  .epr_-rvl3je
+  .epr_-khp9xq
+  .epr_-to8mm
+  .epr_-4ueg5a
+  .epr_iddbfm
+  .epr_vy4vae
+  .epr_-7cq3xd
+  .epr_6ocl7q {
+  width: 100% !important;
+  height: 100% !important;
+}
+/* .input-1 {
+  textarea {
+
+    background-color: transparent !important;
+
+    resize: none !important;
+    line-height: 15px !important;
+    border: 1px solid white !important;
+    outline: none !important;
+    border-radius: 20px !important;
+    color: white !important;
+    padding-left: 10px;
+    padding-top: 5px;
+    font-size: 10px !important;
+    height: 45px;
+    max-height: 40px !important;
+  }
+  textarea:focus {
+    background-color: transparent !important;
+
+    color: #1a1a1a;
+  }
+} */
 @media screen and (max-width: 900px) {
   .logooo {
     display: block;
@@ -601,6 +645,16 @@ li a {
     width: 70%;
     height: 25vmin;
     font-size: 8px;
+  }
+  .palyer-mbl {
+    height: 25% !important;
+  }
+  .chat-bar {
+    height: 22.5rem !important;
+  }
+  .live-chat-responsive {
+    width: 100%;
+    height: 55% !important;
   }
   .banner-text {
     left: 24% !important;
@@ -1865,5 +1919,316 @@ li a {
 @media screen and (max-width: 675px) {
   .deatils-carddd {
     width: 75%;
+  }
+}
+/* Live Chat Responsiveness */
+/* small tabs + mobile view */
+
+@media screen and (max-width: 1020px) {
+  .chat-responsive {
+    display: flex;
+    flex-direction: column;
+  }
+  .liveChat-box {
+    width: 100% !important;
+    background-color: red;
+  }
+  .chat-box-height {
+    min-height: 29rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 26rem !important;
+  }
+  .chat-scroll {
+    max-height: 24rem !important;
+  }
+  #videoPlayer [data-player] {
+    width: 100% !important;
+  }
+  .palyer-mbl {
+    height: 35%;
+  }
+  .live-chat-responsive {
+    width: 100%;
+    height: 55% !important;
+  }
+  .chat-mbl-box {
+    height: 100vh;
+  }
+}
+@media screen and (max-width: 2500px) {
+  .chat-responsive {
+    display: flex;
+  }
+  .chat-box-height {
+    min-height: 61rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 58rem !important;
+  }
+  .chat-scroll {
+    max-height: 56rem !important;
+  }
+  /* .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 26% !important;
+  } */
+}
+@media screen and (max-width: 2400px) {
+  .input-1 {
+    width: 76% !important;
+  }
+  .input-2 {
+    width: 20% !important;
+  }
+}
+@media screen and (max-width: 2400px) {
+  .chat-box-height {
+    min-height: 59rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 56rem !important;
+  }
+  .chat-scroll {
+    max-height: 54rem !important;
+  }
+}
+@media screen and (max-width: 2300px) {
+  .chat-box-height {
+    min-height: 56.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 53rem !important;
+  }
+  .chat-scroll {
+    max-height: 51rem !important;
+  }
+}
+@media screen and (max-width: 2200px) {
+  .chat-box-height {
+    min-height: 54.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 51rem !important;
+  }
+  .chat-scroll {
+    max-height: 50rem !important;
+  }
+}
+@media screen and (max-width: 2100px) {
+  .chat-box-height {
+    min-height: 52rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 49rem !important;
+  }
+  .chat-scroll {
+    max-height: 47.5rem !important;
+  }
+}
+@media screen and (max-width: 2000px) {
+  .chat-box-height {
+    min-height: 49.6rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 45rem !important;
+  }
+}
+@media screen and (max-width: 1980px) {
+  .chat-box-height {
+    min-height: 47.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 42rem !important;
+  }
+}
+@media screen and (max-width: 1900px) {
+  .chat-box-height {
+    min-height: 47.6rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 42rem !important;
+  }
+}
+@media screen and (max-width: 1800px) {
+  .chat-box-height {
+    min-height: 44.5rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 40rem !important;
+  }
+  .msg-text {
+    width: 300px !important;
+  }
+}
+@media screen and (max-width: 1700px) {
+  .chat-box-height {
+    min-height: 42.3rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 37.7rem !important;
+  }
+  .msg-text {
+    width: 280px !important;
+  }
+}
+@media screen and (max-width: 1600px) {
+  .chat-box-height {
+    min-height: 39.7rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 34.7rem !important;
+  }
+  .msg-text {
+    width: 260px !important;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .chat-box-height {
+    min-height: 37rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 32.3rem !important;
+  }
+  .input-1 {
+    width: 73% !important;
+  }
+  .input-2 {
+    width: 25% !important;
+  }
+  .msg-text {
+    width: 240px !important;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .chat-box-height {
+    min-height: 34.6rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 30rem !important;
+  }
+  .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 27% !important;
+  }
+  .msg-text {
+    width: 220px !important;
+    font-size: 12px;
+  }
+  .input-box {
+    bottom: 10px !important;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .chat-box-height {
+    min-height: 32.3rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 28rem !important;
+  }
+  .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 28% !important;
+  }
+  .msg-text {
+    width: 190px !important;
+    font-size: 12px;
+  }
+  .input-box {
+    bottom: 10px !important;
+  }
+  .inputcc {
+    width: 29px !important;
+    height: 29px !important;
+  }
+  .icon-input {
+    height: 15px !important;
+  }
+
+  .emoji-box {
+    /* width: 250px !important; */
+    top: -1050% !important;
+    left: -1000% !important;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .chat-box-height {
+    min-height: 30rem !important;
+  }
+  .inner-chat-box-height {
+    max-height: 47rem !important;
+  }
+  .chat-scroll {
+    max-height: 25rem !important;
+  }
+  .input-1 {
+    width: 70% !important;
+  }
+  .input-2 {
+    width: 28% !important;
+  }
+  .msg-text {
+    width: 170px !important;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .input-1 {
+    width: 90% !important;
+  }
+  .input-2 {
+    width: 10% !important;
+  }
+}
+@media screen and (max-width: 580px) {
+  .input-1 {
+    width: 80% !important;
+  }
+  .input-2 {
+    width: 20% !important;
+  }
+  .palyer-mbl {
+    height: 30%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .input-1 {
+    width: 75% !important;
+  }
+  .input-2 {
+    width: 23% !important;
   }
 }
