--- a/src/App.css
+++ b/src/App.css
@@ -51,29 +51,11 @@ aside {
   width: 100% !important;
   height: 100% !important;
 }
-/* .input-1 {
-  textarea {
 
-    background-color: transparent !important;
-
-    resize: none !important;
-    line-height: 15px !important;
-    border: 1px solid white !important;
-    outline: none !important;
-    border-radius: 20px !important;
-    color: white !important;
-    padding-left: 10px;
-    padding-top: 5px;
-    font-size: 10px !important;
-    height: 45px;
-    max-height: 40px !important;
-  }
-  textarea:focus {
-    background-color: transparent !important;
-
-    color: #1a1a1a;
-  }
-} */
+.chat-bar {
+  direction: "rtl";
+  writing-mode: "vertical-rl";
+}
 @media screen and (max-width: 900px) {
   .logooo {
     display: block;
@@ -230,6 +212,9 @@ aside {
   display: block;
   transition: 1s ease-in-out;
   height: 35px;
+}
+.online {
+  width: max-content;
 }
 @media screen and (max-width: 1500px) {
   .score-card {
@@ -917,7 +902,7 @@ aside {
 
   .contact-form {
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
   }
   .footer {
     height: max-content;
@@ -1388,6 +1373,7 @@ aside {
   }
   .contact-form {
     flex-direction: column;
+    width: 100vw;
   }
   .contact-feild {
     width: 100%;
@@ -1708,18 +1694,22 @@ aside {
   .pages {
     width: 98vw;
   }
-  .contact-feild {
+  /* .contact-feild {
     width: 98vw;
     margin-left: -85px;
-  }
+  } */
   .contact-feild-form {
-    width: 97vw;
-    margin-left: -46px !important;
+    /* width: 97vw; */
+    /* margin-left: -46px !important; */
   }
-  .contact-info {
+  .contact-form {
+    width: 100vw;
+  }
+
+  /* .contact-info {
     width: 98vw;
     margin-left: -85px !important;
-  }
+  } */
 }
 
 @media screen and (max-width: 720px) {
@@ -1929,6 +1919,7 @@ aside {
     display: flex;
     flex-direction: column;
   }
+
   .liveChat-box {
     width: 100% !important;
     background-color: red;
@@ -1944,7 +1935,12 @@ aside {
   }
   #videoPlayer [data-player] {
     width: 100% !important;
+    /* height: 100vh !important; */
   }
+  /* .videoplayer [data-player] {
+    width: 100% !important;
+    height: 100vh !important;
+  } */
   .palyer-mbl {
     height: 35%;
   }
@@ -2205,12 +2201,20 @@ aside {
     font-size: 12px;
   }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1120px) {
+  .live-chat-responsive {
+    margin-top: 8px !important;
+  }
+}
+@media screen and (max-width: 1020px) {
   .input-1 {
     width: 90% !important;
   }
   .input-2 {
     width: 10% !important;
+  }
+  .live-chat-responsive {
+    margin-top: 0px !important;
   }
 }
 @media screen and (max-width: 580px) {
