--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ div {
   /* overflow-y: hidden; */
   background-color: #0d0624;
 }
+[data-player] {
+  width: 100% !important;
+  height: 90vh !important;
+}
 .action-dot {
   visibility: hidden;
 }
@@ -56,6 +60,12 @@ li a {
 aside {
   width: 100% !important;
   height: 100% !important;
+}
+.epr-header {
+  display: none !important;
+}
+.epr-skin-tones {
+  display: none !important;
 }
 .epr-main
   .EmojiPickerReact
@@ -438,10 +448,18 @@ aside {
   .mainSlider {
     height: 24rem !important;
   }
+  .chat-responsive {
+    display: flex;
+    flex-direction: column;
+  }
 }
 @media screen and (max-width: 1100px) {
   .mainSlider {
     height: 22.5rem !important;
+  }
+  .live-chat-responsive1 {
+    width: 100%;
+    height: 40vh !important;
   }
 }
 @media screen and (max-width: 1050px) {
@@ -665,7 +683,7 @@ aside {
   } */
   .live-chat-responsive {
     width: 100%;
-    height: 55% !important;
+    height: 45% !important;
   }
   .banner-text {
     left: 24% !important;
@@ -1906,9 +1924,6 @@ aside {
   .live-deatil-container {
     width: 100%;
   }
-  .live-chat-responsive1 {
-    width: 40%;
-  }
 }
 @media screen and (max-width: 1120px) {
   .deatils-carddd {
@@ -1998,6 +2013,7 @@ aside {
   .live-chat-responsive {
     width: 100%;
     height: 55% !important;
+    justify-content: flex-start !important;
   }
   .chat-mbl-box {
     height: 100vh;
@@ -2025,10 +2041,10 @@ aside {
 }
 @media screen and (max-width: 2400px) {
   .input-1 {
-    width: 76% !important;
+    width: 70% !important;
   }
   .input-2 {
-    width: 20% !important;
+    width: 23% !important;
   }
 }
 @media screen and (max-width: 2400px) {
@@ -2244,12 +2260,20 @@ aside {
   .chat-scroll {
     max-height: 25rem !important;
   }
+  [data-player] {
+    width: 100% !important;
+    height: 50vh !important;
+  }
+  .live-chat-responsive1 {
+    width: 100%;
+  }
   .input-1 {
-    width: 70% !important;
+    width: 90% !important;
   }
   .input-2 {
-    width: 28% !important;
+    width: 13% !important;
   }
+
   .msg-text {
     width: 170px !important;
     font-size: 12px;
