--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@ div {
   overflow-x: hidden !important;
   background-color: #0d0624;
 }
+.crisp-client .cc-tlyw[data-full-view="true"] .cc-kxkl .cc-nsge .cc-imbb {
+  display: block !important;
+}
 .App {
   width: 100vw;
   height: 100vh;
@@ -471,7 +474,7 @@ aside {
   }
   .live-chat-responsive1 {
     width: 100%;
-    height: 40vh !important;
+    height: 58vh !important;
   }
 }
 @media screen and (max-width: 1050px) {
@@ -697,6 +700,7 @@ aside {
     width: 100%;
     height: 45% !important;
   }
+
   .banner-text {
     left: 24% !important;
     font-size: 24px !important;
@@ -2015,10 +2019,10 @@ aside {
   .chat-scroll {
     max-height: 24rem !important;
   }
-  #videoPlayer [data-player] {
+  /* #videoPlayer [data-player] {
     width: 100% !important;
-    /* height: 100vh !important; */
-  }
+    height: 100vh !important;
+  } */
   /* .videoplayer [data-player] {
     width: 100% !important;
     height: 100vh !important;
@@ -2028,7 +2032,7 @@ aside {
   }
   .live-chat-responsive {
     width: 100%;
-    height: 55% !important;
+    /* height: 55% !important; */
     justify-content: flex-start !important;
   }
   .chat-mbl-box {
@@ -2276,6 +2280,9 @@ aside {
   .inner-chat-box-height {
     max-height: 47rem !important;
   }
+  .responsive-container {
+    height: 55vh !important;
+  }
   .chat-scroll {
     max-height: 25rem !important;
   }
@@ -2326,6 +2333,22 @@ aside {
   }
   .palyer-mbl {
     height: 30%;
+  }
+  [data-player] {
+    width: 100% !important;
+    height: 40vh !important;
+  }
+}
+@media screen and (max-width: 480px) {
+  [data-player] {
+    width: 100% !important;
+    height: 30vh !important;
+  }
+  .chat-box-container {
+    height: 100% !important;
+  }
+  .live-chat-responsive {
+    height: 60% !important;
   }
 }
 @media screen and (max-width: 400px) {
