--- a/src/App.css
+++ b/src/App.css
@@ -344,6 +344,7 @@ aside {
     width: 75vw;
   }
 
+
   .mainSlider {
     height: 32rem;
   }
@@ -479,6 +480,9 @@ aside {
   .chat-box-container {
     height: 93% !important;
   }
+  .affiliates-card{
+    width: 45% !important;
+  }
 }
 @media screen and (max-width: 1155px) {
   .mainSlider {
@@ -515,6 +519,15 @@ aside {
     position: absolute;
     left: 43%;
     margin-top: -8px;
+  }
+   .affiliate-dash-main{
+    width: 97%;
+    padding: 12px;
+  }
+   .affiliates-card{
+    width: 80%;
+    display: block !important;
+
   }
   .mainSlider {
     /* margin-top: 20px !important; */
@@ -1301,6 +1314,15 @@ aside {
   }
   .tem-img {
     margin-top: -10px;
+  }
+  .affiliate-dash-main{
+    width: 97%;
+    padding: 12px;
+  }
+   .affiliates-card{
+    width: 100% !important;
+    display: block !important;
+
   }
 }
 @media screen and (max-width: 540px) {
