--- a/src/App.css
+++ b/src/App.css
@@ -2342,6 +2342,9 @@ aside {
   .mbl-chat {
     width: 100%;
   }
+  .mbl-error-box{
+    width: 95vw !important;
+  }
   .inner-chat-box-height {
     max-height: 47rem !important;
   }
@@ -2388,6 +2391,9 @@ aside {
   .live-chatr-footer {
     position: relative !important;
   }
+  .mbl-error-box{
+    width: 95vw !important;
+  }
 }
 @media screen and (max-width: 580px) {
   .input-1 {
@@ -2398,6 +2404,9 @@ aside {
   }
   .palyer-mbl {
     height: 30%;
+  }
+  .mbl-error-box{
+    width: 95vw !important;
   }
   /* [data-player] {
     width: 100% !important;
@@ -2424,10 +2433,16 @@ aside {
   .mbl-chat-font {
     font-size: 12px !important;
   }
+  .mbl-error-box{
+    width: 95vw !important;
+  }
 }
 @media screen and (max-width: 400px) {
   .input-1 {
     width: 75% !important;
+  }
+  .mbl-error-box{
+    width: 95vw !important;
   }
   .input-2 {
     width: 23% !important;
