--- a/src/App.css
+++ b/src/App.css
@@ -1887,7 +1887,7 @@ aside {
     width: 93vw;
     margin-left: -90px;
   }
-  */ .pay-card-box {
+  .pay-card-box {
     width: 80vw;
   }
   .pay-cardds {
